v12.0.3
- use json-rpc for random addons

v12.0.2
- fix potential unicode encode error

v12.0.1
- use join method for array to string conversion
- fixed: music video artists must be converted to a string as well

v12.0.0
- version bump for pre-frodo
- fixed changes in JSON-RPC

v3.1.5
- fix error on empty JSON-RPC result

v3.1.3
- don't error on invalid addon.xml files

v3.1.2
- fixed script error on empty library

v3.1.1
- added "RandomArtist.%d.Genre"

v3.1.0
- added "Random Artists" properties:

"RandomArtist.%d.Title"
"RandomArtist.%d.Path"
"RandomArtist.%d.Fanart"
"RandomArtist.%d.Thumb"
"RandomArtist.%d.Artist_Description"

v3.0.10
- added album description property (randomalbum.x.album_description)

v3.0.9
- use title instead of label

v3.0.8
- use json when python 2.7 is available

v3.0.7
- ignore possible encoding errors

v3.0.6
- use simplejson instead of regex

v3.0.5
- clean plot

v 3.0.4:
- add support for music videos
- added addon type property
- return two digit values for episode and season numbers

v 3.0.3:
- adjusted to latest json-rpc changes
- fixed json query when compactoutput was set to false

v 3.0.2:
- fixed fetching random albums

v 3.0.1:
- fixed error when trying to fetch info for installed addons only available in the dharma repo

v 3.0.0:
- rewrote script to use json-rpc

v 2.0.0:
- version bump for eden repo

v 1.0.14:
- use addon-id instead of foldername

v 1.0.13:
- added random addons

v 1.0.12:
- eden-pre compatibility

v 1.0.11:
- append ratings after first decimal point

v 1.0.10:
- don't clear window properties when playing an album
- don't execute script.recentlyadded internally